# pose-guardian

./: .gitignore  LICENSE  README.md  pyproject.toml
benchmark/: __init__.py  compare_results.py  run_benchmark.py  run_fault_test.py  run_pck_eval.py
benchmark/reference_clips/: .gitkeep
benchmark/results/: .gitkeep
docs/: architecture.md  controlled_vs_naive.md  hardware_setup.md  memory_pressure_smoke.md  pck_pseudo_gt.md  pi_benchmark.md  pi_benchmark_day2.md  pi_first_boot.md  repeated_cpu_stress.md  resource_monitor.md  resource_monitor_day3.md  week3_controlled_vs_naive.md
examples/: benchmark_clips.py  check_clips.py  compare_control_runs.py  record_clips.py  run_controlled.py  run_demo.py  run_monitored.py  sanity_check.py
metrics/: .gitkeep
models/: download_models.sh
src/: __init__.py  camera.py  config.py  fault_injector.py  metrics_collector.py  pose_estimator.py  resource_controller.py  resource_monitor.py  visualizer.py
tests/: test_camera.py  test_compare_control_runs.py  test_fault_injector.py  test_pose_estimator.py  test_resource_controller.py  test_resource_monitor.py  test_run_controlled.py  test_run_monitored.py  test_run_pck_eval.py  test_sanity_check.py
